--- a/style.css
+++ b/style.css
@@ -7,8 +7,9 @@ body {
 }
 body {
   font-size: 14px;
-  background-color: #222;
+  background-color: #000;
   color: #fff;
+  overflow: hidden;
 }
 body * {
   box-sizing: border-box;
@@ -28,6 +29,29 @@ body * {
   margin-left: -0.3em;
   vertical-align: middle;
 }
+.container #theapt {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.container .bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: all 2s;
+  -webkit-transform: scale(1.7);
+  -ms-transform: scale(1.7);
+  -o-transform: scale(1.7);
+  transform: scale(1.7);
+}
+.container .bg-video.reveal {
+  opacity: 0.1;
+}
 .container .vertical-center {
   font-family: 'VT323';
   display: inline-block;
@@ -37,6 +61,8 @@ body * {
   -moz-user-select: text;
   -webkit-user-select: text;
   -ms-user-select: text;
+  position: relative;
+  z-index: 2;
 }
 .logo {
   width: 7em;
