--- a/style.less
+++ b/style.less
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=VT323');
 
+.scale(@ratio) {
+  -webkit-transform: scale(@ratio);
+      -ms-transform: scale(@ratio); // IE9 only
+       -o-transform: scale(@ratio);
+          transform: scale(@ratio);
+}
+
 html, body {
 	width: 100%;
 	height: 100%;
@@ -8,8 +15,9 @@ html, body {
 
 body {
 	font-size: 14px;
-	background-color: #222;
+	background-color: #000;
 	color: #fff;
+	overflow: hidden;
 	* {
 		box-sizing: border-box;
 	}
@@ -29,6 +37,28 @@ body {
 		margin-left: -0.3em;
 		vertical-align: middle;
 	}
+	#theapt {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
+
+	.bg-video {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		opacity: 0;
+		transition: all 2s;
+		.scale(1.7);
+		&.reveal {
+			opacity: 0.1;
+		}
+	}
+
 	.vertical-center {
 		font-family: 'VT323';
 		display: inline-block;
@@ -38,6 +68,8 @@ body {
 		-moz-user-select: text;
 		-webkit-user-select: text;
 		-ms-user-select: text;
+		position: relative;
+		z-index: 2;
 	}
 }
 
