--- a/style.less
+++ b/style.less
@@ -71,6 +71,15 @@ body {
 		position: relative;
 		z-index: 2;
 	}
+
+	.lyric {
+		transition: all 20s linear;
+		max-height: 0px;
+		overflow: hidden;
+		&.show {
+			max-height: 150px;
+		}
+	}
 }
 
 .logo {
@@ -102,7 +111,7 @@ h2 {
 
 .countdown, .is-countdown {
 	font-size: 2em;
-	margin-top: 1em;
+	margin-top: 0.25em;
 	// font-family: sans-serif;
 	font-family: 'VT323';
 }
