--- a/style.less
+++ b/style.less
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=VT323');
+// @import url('https://fonts.googleapis.com/css?family=VT323');
+// @import url('https://fonts.googleapis.com/css?family=Poiret+One');
+@import url(https://fonts.googleapis.com/css?family=Oleo+Script);
+
+@main_font: 'Oleo Script';
 
 .scale(@ratio) {
   -webkit-transform: scale(@ratio);
@@ -37,6 +41,18 @@ body {
 		margin-left: -0.3em;
 		vertical-align: middle;
 	}
+	&:after {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-image: url('dots.png');
+		background-size: 4em;
+		opacity: 0.25;
+		z-index: 1;
+	}
 	#theapt {
 		position: absolute;
 		top: 0;
@@ -55,12 +71,12 @@ body {
 		transition: all 2s;
 		.scale(1.7);
 		&.reveal {
-			opacity: 0.1;
+			opacity: 1;
 		}
 	}
 
 	.vertical-center {
-		font-family: 'VT323';
+		font-family: @main_font;
 		display: inline-block;
 		vertical-align: middle;
 		width: 1024px;
@@ -101,6 +117,10 @@ h2 {
 	margin-bottom: 0.5em;
 }
 
+p {
+	// font-size: 1.25em;
+}
+
 .countdown {
 	opacity: 0;
 	transition: opacity 0.5s;
@@ -113,7 +133,7 @@ h2 {
 	font-size: 2em;
 	margin-top: 0.25em;
 	// font-family: sans-serif;
-	font-family: 'VT323';
+	font-family: @main_font;
 }
 .countdown-holding span {
 	color: #888;
